Migration of codegen module to junit5