@@ -6,7 +6,6 @@ import com.querydsl.apt.AbstractProcessorTest;
 import com.querydsl.apt.QuerydslAnnotationProcessor;
 import java.io.File;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Arrays;
@@ -25,10 +24,8 @@ public class InnerExtensionsTest extends AbstractProcessorTest {
             new File(packagePath, "ExampleEntity2.java").getPath());
     process(QuerydslAnnotationProcessor.class, sources, "innerextensions");
     var qtypeContent =
-        new String(
-            Files.readAllBytes(
-                Path.of("target", "innerextensions", "com", "querydsl", "QExampleEntity2.java")),
-            StandardCharsets.UTF_8);
+        Files.readString(
+            Path.of("target", "innerextensions", "com", "querydsl", "QExampleEntity2.java"));
     assertThat(qtypeContent)
         .contains("return InnerExtensions.ExampleEntity2Extensions.isZero(this);");
   }
